# thesis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env-lintim.env  env-thesis-lintim.env  hpc.sh  install_lintim.sh  logs  model.lp  out.json  pyproject.toml  run-big-eval.sh  run-data-gen.sh  run-eval.sh  run-sub-timpasslib-eval.sh  run-timpasslib-eval.sh  run-train-array.sh  run-train-single-gpushort.sh  run-train-single-overfit-test.sh  run-transform.sh  run.sh  sweep-2-config.yaml  sweep-array-big.sh  sweep-array-gpushort.sh  sweep-config.yaml
latex/: .gitignore  aaltothesis.cls  calc_data_gen_node_count_distribution.py  data-stats-updated.ipynb  eval-plots.ipynb  eval-timpasslib-results.ipynb  genration-density-plot.ipynb  la-pe.ipynb  parse.py  refs.bib  structure.md  structure_PS.md  thesis.tex  thesis.tex-template
latex/bib-junk/: 10.1007_s10951-021-00719-1-citation.ris  10.1007_s12469-020-00244-y-citation.ris  NIPS-2012-practical-bayesian-optimization-of-machine-learning-algorithms-Bibtex.bib  S0377221720306895.bib  S0925231222014035.bib  S0968090X22000146.bib  S2666651021000012.bib
latex/figures/: tikz-aux-events-demo.tex  tikz-base-ptn.tex  tikz-change-demo.tex  tikz-cycle-basis.tex  tikz-drive-wait.tex  tikz-line-graph.tex  tikz-process-flow.tex  tikz-relations.tex  tikz-sync-demo.tex
latex/figures/tikz/: cycle-basis.tex
solutions/toy2/0/: Activities.csv  OD.csv  timetable.csv  used_paths.csv  weights.csv
solutions/toy2/1/: Config.csv  Events.csv  OD.csv  timetable.csv  used_paths.csv  weights.csv
src/models/: cycle_basis.py  preprocessor.py  solver.py  timpass.py
src/thesis/: __init__.py
src/thesis/data/: generator.py  schema.py  wrapper.py
src/thesis/evaluation/: evaluate.py  model.py
src/thesis/models/gnn/: __init__.py  data.py  demo.py  demo.py.unused  hgt.py
src/thesis/models/mip/: cycle_basis.py  pesp.py  preprocessor.py  solver.py  timpass.py
src/thesis/scripts/: __main__.py  big_eval.py  data_generation.py  eval_amend.py  eval_timpasslib.py  evaluation.py  filter.py  multi_solution_check.py  multi_solution_generation.py  pre_batcher.py  train.py  transform_data.py
src/timpass/: timpass.py
tests/data/: test_data_reader.py
tests/data/sample_datasets/miniature/: Activities.csv  Config.csv  Events.csv  OD.csv
(+4 files in other folders)
