[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "Leevi's MSc thesis implementation code"
authors = ["Leevi Rönty <leevi.ronty@aalto.fi>"]
readme = "README.md"
packages = [{include = "thesis", from="src"}]


[tool.poetry.scripts]
thesis = "thesis.scripts.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ortools = "^9.6.2534"
pandas = "^2.0.3"
pulp = "^2.7.0"
pandera = {version = "^0.16.1", extras = ["mypy"]}
attrs = "^23.1.0"
networkx = "^3.1"
gurobipy = "^10.0.2"
cattrs = "^23.1.2"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
lightning = "^2.0.6"
wandb = "^0.15.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
ipykernel = "^6.25.0"
debugpy = "^1.6.7"
tabulate = "^0.9.0"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
